Detalles de portfolio y servicios, botones de index y nosotros

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <!-- Logo del sitio -->
     <link rel="icon" href="img/favicon.png" type="image/x-icon"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+   
+    <!-- link de CDN de animates  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
     <!-- Enlaces a la hoja de estilo-->
     <link rel="stylesheet" href="css/style.css">
+
     <!-- SEO -->
     <meta name="description" content="Es importante que sitio desarrollo este diseñado con estilo propio, a medida para tu necesidad.">
     <meta name="author" content="Conti Ricardo">
@@ -53,7 +58,7 @@
     <main>
         <div id="home">
             <div class="home cont">
-                <div>
+                <div class="animate__animated animate__backInUp">
                     <div class="homeMarca">
                         <span>D</span>
                         <span>i</span>
