--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -133,7 +133,10 @@
             </div>
             <div class="text-center redes">
                 <a href="../index.html">
-                    <img src="../img/logos/logo_CR.png" alt="logo Disegno CR"/>
+                    <picture>
+                        <source media="(min-width:650px)" srcset="../img/logos/logo_CR.png" >
+                        <img src="../img/logos/icono_CR.png" alt="logo Disegno CR" >
+                    </picture>
                 </a>
             </div>
         </div>
