--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -9,8 +9,13 @@
     <link rel="icon" href="../img/favicon.png" type="image/x-icon"/>
     <!-- link a bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    
+    <!-- link de CDN de animates  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
     <!-- link a la hoja de estilo -->
     <link rel="stylesheet" href="../css/style.css">
+    
     <!-- SEO -->
     <meta name="description" content="Nuestra experiencia aplica en una amplia gama de habilidades en desarrollo web, diseño web, programación, marketing y SEO, con herramientas modernas para brindar el mejor resultado de su proyecto.">
     <meta name="author" content="Conti Ricardo">
@@ -108,34 +113,34 @@
                 <p>Estas son nuestras habilidades como Agencia SEO que podemos brindarle a tu negocio:</p>
             </div>
             <div class="container">
-                <div class="row text-center">
-                    <div class="col-lg-6 col-md-6 col-sm-12">
-                        <img src="../img/servicio/seo/capacitacion.png" alt="Capacitación SEO">
+                <div class="row text-center animate__animated animate__bounceInUp">
+                    <div class="col-lg-6 col-md-6 col-sm-12 my-2">
+                        <img class="imgSEO" src="../img/servicio/seo/capacitacion.png" alt="Capacitación SEO">
                         <h4>Capacitación SEO</h4>
                         <p>Capacitación personalizada al equipo de redacción</p>
                     </div>
-                    <div class="col-lg-6 col-md-6 col-sm-12">
-                        <img src="../img/servicio/seo/competidor.png" alt="Competencia SEO">
+                    <div class="col-lg-6 col-md-6 col-sm-12 my-2">
+                        <img class="imgSEO" src="../img/servicio/seo/competidor.png" alt="Competencia SEO">
                         <h4>Competencia SEO</h4>
                         <p>Analizamos a los competidores y tomamos acciones</p>
                     </div>
-                    <div class="col-lg-6 col-md-6 col-sm-12">
-                        <img src="../img/servicio/seo/investigacion.png" alt="Análisis SEO">
+                    <div class="col-lg-6 col-md-6 col-sm-12 my-2">
+                        <img class="imgSEO" src="../img/servicio/seo/investigacion.png" alt="Análisis SEO">
                         <h4>Análisis SEO</h4>
                         <p>Diagnosticamos el sitio, para realizar optimizaciones</p>
                     </div>
-                    <div class="col-lg-6 col-md-6 col-sm-12">
-                        <img src="../img/servicio/seo/estrategia.png" alt="Estrategía SEO">
+                    <div class="col-lg-6 col-md-6 col-sm-12 my-2">
+                        <img class="imgSEO" src="../img/servicio/seo/estrategia.png" alt="Estrategía SEO">
                         <h4>Estrategia SEO</h4>
                         <p>Trazamos la mejor estrategia para tu página web</p>
                     </div>
-                    <div class="col-lg-6 col-md-6 col-sm-12">
-                        <img src="../img/servicio/seo/gestion-de-contenido.png" alt="Contenidos SEO">
+                    <div class="col-lg-6 col-md-6 col-sm-12 my-2">
+                        <img class="imgSEO" src="../img/servicio/seo/gestion-de-contenido.png" alt="Contenidos SEO">
                         <h4>Contenidos SEO</h4>
                         <p>Hacemos una búsqueda de palabras clave</p>
                     </div>
-                    <div class="col-lg-6 col-md-6 col-sm-12">
-                        <img src="../img/servicio/seo/seguimiento.png" alt="Seguimiento SEO">
+                    <div class="col-lg-6 col-md-6 col-sm-12 my-2">
+                        <img class="imgSEO" src="../img/servicio/seo/seguimiento.png" alt="Seguimiento SEO">
                         <h4>Seguimiento SEO</h4>
                         <p>Analizamos y seguimos a diario las métricas</p>
                     </div>
@@ -186,7 +191,10 @@
             </div>
             <div class="text-center redes">
                 <a href="../index.html">
-                    <img src="../img/logos/logo_CR.png" alt="logo Disegno CR"/>
+                    <picture>
+                        <source media="(min-width:650px)" srcset="../img/logos/logo_CR.png" >
+                        <img src="../img/logos/icono_CR.png" alt="logo Disegno CR" >
+                    </picture>
                 </a>
             </div>
         </div>
